# csg-2025-assembly

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: .gitignore
docs/common/: macro.sty  styles.sty
docs/en/: main.tex  sec-architecture.tex  sec-citation.tex  sec-competition.tex  sec-debugger.tex  sec-instructions.tex  sec-memory.tex  sec-score.tex
docs/fr/: main.tex  sec-architecture.tex  sec-citation.tex  sec-competition.tex  sec-debugger.tex  sec-instructions.tex  sec-memory.tex  sec-score.tex
includes/: arguments.h  consts.h  parser.h  statement.h
includes/instructions/: base_instructions.h  instructions.h  primitives_instructions.h
includes/lego/: block.h
includes/pipeline/: pipeline.h  pipeline_stage.h
includes/sandbox/: sandbox.h
includes/visualizer/: help.h  visualizer.h
manuals/fmt1/: m1_1.txt  m1_2.txt  m1_3.txt  m1_4.txt  m1_5.txt  m1_6.txt  m1_7.txt  m2_2.txt  m2_3.txt  m2_4.txt  m2_5.txt  m2_6.txt  m2_7.txt  m3_1.txt  m3_2.txt  m3_3.txt  m4.txt  m5.txt  m6.txt
manuals/fmt2/: m1_1.txt  m1_2.txt  m1_3.txt  m1_4.txt  m1_5.txt  m1_6.txt  m1_7.txt  m2_2.txt  m2_3.txt  m2_4.txt  m2_5.txt  m2_6.txt  m2_7.txt  m2_8.txt  m2_9.txt  m3_1.txt  m3_2.txt  m3_3.txt  m4.txt  m5.txt  m6.txt
src/: main.cpp
